<resources>
    <string name="app_name">Hello World</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="toast">Toast</string>
    <string name="random">Random</string>

    <string name="hello_first_fragment">0</string>
    <string name="randomtextview_secondfragment">0</string>
    <string name="headertextview_secondfragment">Here is a random number between 0 and %d</string>
</resources>